# SpheroidalWaveFunctions.jl

./: .gitignore  Artifacts.toml  BUILD.md  CMakeLists.txt  Manifest.toml  Project.toml  README.md
.github/workflows/: CI.yml  Documentation.yml  UpdateArtifacts.yml
0.1.0/: .documenter-siteinfo.json  index.html
0.1.0/api/: index.html
0.1.0/backend-overrides/: index.html
0.1.0/math-and-usage/: index.html
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/api/: index.html
dev/backend-overrides/: index.html
dev/math-and-usage/: index.html
docs/: Project.toml  make.jl  mathematical-basis-and-usage.md
docs/src/: api.md  backend-overrides.md  index.md  math-and-usage.md
scripts/: update_artifacts.jl
src/: SpheroidalWaveFunctions.jl  SpheroidalWaves.jl  eigenvalue_sweep.jl
test/: runtests.jl
